Refactor the create command to cloud